--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Test01</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">MI APP 2.0</string>
+    <string name="action_settings">Configuraciones</string>
 </resources>
